--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@azure/storage-blob": "12.16.0",
     "@azure/openai": "^1.0.0-beta.11",
+    "@azure/storage-blob": "12.16.0",
     "@chakra-ui/react": "2.8.1",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@tanstack/react-query": "5.7.2",
     "framer-motion": "10.16.4",
+    "lucide-react": "^0.319.0",
     "next": "14.0.1",
     "react": "18",
     "react-confetti": "6.1.0",
     "react-dom": "18",
-    "react-icons": "4.11.0",
     "react-speech-recognition": "3.10.0",
     "react-use": "17.5.0",
     "uuid": "9.0.1"
